# optimal-physical-layout-query-processing

./: .gitignore  CMakeLists.txt  README.md  build.sh  experimentsConfig.cpp  partitioner.cpp
benchmark/: README.md  benchmark.py  benchmark_config.py  benchmark_instance.py  benchmark_result.py  benchmark_runner.py  clean.sh  config.py  exceptions.py  explain_query.py  instance.py  mini_benchmarks.py  plot.py  query_parser.py  requirements.txt  result.py  run_benchmarks.py  runner.py  settings.py  start.sh  storage_manager.py  tpch.duckdb  workload.py  workload_osm.py  workload_taxi.py  workload_tpch.py
benchmark/benchmarks/: benchmark_osm.py  benchmark_taxi.py  benchmark_tpch.py  osm.py  taxi.py  tpch.py
benchmark/data/gmrqb/: import_gmrqb.py
benchmark/data/tpch/: data-generation.txt  import_tpch.py
benchmark/queries/gmrqb/templates/: 2.sql  5.sql  7.sql
benchmark/queries/osm/: 2.sql  3.sql  4.sql  6.sql
benchmark/queries/taxi/: 1.sql  1_s0.01.sql  1_s9.73.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql
benchmark/queries/tpch/: 3_s0.01.sql  3_s0.1.sql  3_s1.sql  3_s10.sql  qgen  queries_tpch.py  tpch.sql
benchmark/queries/tpch/snowset-patterns/: query_stream_0.json  query_stream_1.json
benchmark/queries_full/: selectivities.csv
benchmark/queries_full/osm/: 1.sql  5.sql
benchmark/queries_full/tpch/snowset-patterns/: query_stream_2.json  query_stream_3.json
benchmark/queries_scaled/osm/: 7.sql
benchmark/queries_scaled/taxi/: 5.sql
benchmark/queries_scaled/tpch/: 10.sql  3.sql
benchmark/queries_scaled/tpch/snowset-patterns/: query_stream_4.json
cmake/: arrow.cmake
datasets/gmrqb/: import_gmrqb.py
datasets/taxi/: import_taxi.py
datasets/tpch/: import_tpch.py
include/partitioning/: FixedGrid.h  Partitioning.h
libpartitioner/: CMakeLists.txt
libpartitioner/common/: KDTree.cpp  QuadTree.cpp
libpartitioner/include/common/: ColumnDataConverter.h  Exception.h  HilbertCurve.h  KDTree.h  Point.h  QuadTree.h  Settings.h  ZOrderCurve.h
libpartitioner/include/common/morton-nd/: mortonND_BMI2.h  util.cpp
libpartitioner/include/partitioning/: FixedGridPartitioning.h  GridFilePartitioning.h  HilbertCurvePartitioning.h  KDTreePartitioning.h  NoPartitioning.h  Partitioning.h  PartitioningFactory.h  PartitioningType.h  QuadTreePartitioning.h  STRTreePartitioning.h  ZOrderCurvePartitioning.h
libpartitioner/include/storage/: DataReader.h  DataWriter.h  TableGenerator.h
libpartitioner/include/structures/: HilbertCurve.h  KDTree.h  QuadTree.h  ZOrderCurve.h
libpartitioner/partitioning/: FixedGridPartitioning.cpp  GridFilePartitioning.cpp  HilbertCurvePartitioning.cpp  KDTreePartitioning.cpp  NoPartitioning.cpp  Partitioning.cpp  QuadTreePartitioning.cpp  STRTreePartitioning.cpp  ZOrderCurvePartitioning.cpp
libpartitioner/storage/: DataReader.cpp  DataWriter.cpp  TableGenerator.cpp
libpartitioner/structures/: KDTree.cpp  QuadTree.cpp
partitioner/: CMakeLists.txt  experimentsConfig.cpp  partitioner.cpp
queries/gmrqb/templates/: 1.sql  3.sql  4.sql  6.sql  8.sql
queries/tpch/: tpch.sql
src/: CMakeLists.txt  apply_partitioning.cpp  main.cpp
src/common/: DataLayoutConverter.cpp  FixedGrid.cpp  FixedGrid.h  KDTree.cpp  QuadTree.cpp
src/include/common/: ColumnDataConverter.h  DataLayoutConverter.h  HilbertCurve.h  KDTree.h  Node.h  Point.h  QuadTree.h  ZOrderCurve.h
src/include/common/morton-nd/: mortonND_LUT.h
src/include/partitioning/: FixedGrid.h  FixedGridPartitioning.h  GridFilePartitioning.h  HilbertCurvePartitioning.h  KDTree.h  KDTreePartitioning.h  NoPartitioning.h  Partitioning.h  QuadTreePartitioning.h  STRTreePartitioning.h  ZOrderCurvePartitioning.h
src/include/storage/: DataReader.h  DataWriter.h
src/partitioning/: FixedGrid.cpp  FixedGridPartitioning.cpp  GridFilePartitioning.cpp  HilbertCurvePartitioning.cpp  KDTree.cpp  KDTreePartitioning.cpp  NoPartitioning.cpp  QuadTreePartitioning.cpp  STRTreePartitioning.cpp  ZOrderCurvePartitioning.cpp
src/storage/: DataReader.cpp  DataWriter.cpp  DataWriter.h
test/: CMakeLists.txt  README.md  fixture.cpp  main.cpp  testExternalMergeSort.cpp  testFixedGrid.cpp  testGridFile.cpp  testHilbertCurve.cpp  testKDTree.cpp  testPartition.cpp  testPartitionTPCH.cpp  testQuadTree.cpp  testReadWrite.cpp  testSTRTree.cpp  testZOrderCurve.cpp
